--- a/bloom-and-vine/src/Pages/Contact.css
+++ b/bloom-and-vine/src/Pages/Contact.css
@@ -12,6 +12,7 @@
 	height: fit-content;
 	overflow: hidden;
 	display: flex;
+	background-color: #FAF1EF;
 }
 
 .Rightside-Screen {
